# athena-query-stats

./: .gitignore  README.md  athena_stats.py  pyproject.toml
athena_query_stats/: athena_stats.py
